--- a/cankiet/templates/cankiet/orders.html
+++ b/cankiet/templates/cankiet/orders.html
@@ -10,12 +10,12 @@
   <title>Order Food</title>
 
   <!-- Favicons-->
-  <link rel="icon" href="{% static 'images/favicon/favicon-32x32.png' %}" sizes="32x32">
+  <link rel="icon" href="{% static './images/favicon/favicon-32x32.png' %}" sizes="32x32">
   <!-- Favicons-->
-  <link rel="apple-touch-icon-precomposed" href="{% static 'images/favicon/apple-touch-icon-152x152.png'%}">
+  <link rel="apple-touch-icon-precomposed" href="{% static './images/favicon/apple-touch-icon-152x152.png'%}">
   <!-- For iPhone -->
   <meta name="msapplication-TileColor" content="#00bcd4">
-  <meta name="msapplication-TileImage" content="{% static 'images/favicon/mstile-144x144.png'%}">
+  <meta name="msapplication-TileImage" content="{% static './images/favicon/mstile-144x144.png'%}">
   <!-- For Windows Phone -->
   <!-- CORE CSS-->
   <link href="{% static 'css/materialize.min.css'%}" type="text/css" rel="stylesheet" media="screen,projection">
@@ -72,11 +72,11 @@
 
 <body>
   <!-- Start Page Loading -->
-  <div id="loader-wrapper">
+  {% comment %} <div id="loader-wrapper">
       <div id="loader"></div>        
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
-  </div>
+  </div> {% endcomment %}
   <!-- End Page Loading -->
 
   <!-- //////////////////////////////////////////////////////////////////////////// -->
@@ -88,7 +88,7 @@
             <nav class="navbar-color">
                 <div class="nav-wrapper">
                     <ul class="left">                      
-                      <li><h1 class="logo-wrapper"><a href="index.php" class="brand-logo darken-1"><img src="{% static 'images/logo.png' %}" alt="logo"></a> <span class="logo-text">Logo</span></h1></li>
+                      <li><h1 class="logo-wrapper"><a href="index.php" class="brand-logo darken-1"><img src="{% static './images/logo.png' %}" alt="logo"></a> <span class="logo-text">Logo</span></h1></li>
                     </ul>					
                 </div>
             </nav>
@@ -114,7 +114,7 @@
                 </div>
 				 <div class="col col s8 m8 l8">
                     <ul id="profile-dropdown" class="dropdown-content">
-                        <li><a href="routers/logout.php"><i class="mdi-hardware-keyboard-tab"></i> Logout</a>
+                        <li><a href="routers/logout.php"> <i class="mdi-hardware-keyboard-tab"></i> Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -241,24 +241,24 @@
     ================================================ -->
     
     <!-- jQuery Library -->
-    <script type="text/javascript" src="{ % static 'js/plugins/jquery-1.11.2.min.js' %}"></script>    
+    <script type="text/javascript" src="{% static 'js/plugins/jquery-1.11.2.min.js' %}"></script>    
     <!--angularjs-->
-    <script type="text/javascript" src="{ % static 'js/plugins/angular.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/plugins/angular.min.js'%}"></script>
     <!--materialize js-->
-    <script type="text/javascript" src="{ % static 'js/materialize.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
     <!--scrollbar-->
-    <script type="text/javascript" src="{ % static 'js/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/plugins/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
     <!-- data-tables -->
-    <script type="text/javascript" src="{ % static 'js/plugins/data-tables/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="{ % static 'js/plugins/data-tables/data-tables-script.js"></script>
+    <script type="text/javascript" src="{% static 'js/plugins/data-tables/js/jquery.dataTables.min.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/plugins/data-tables/data-tables-script.js'%}"></script>
 	
-    <script type="text/javascript" src="{ % static 'js/plugins/jquery-validation/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="{ % static 'js/plugins/jquery-validation/additional-methods.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/plugins/jquery-validation/jquery.validate.min.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/plugins/jquery-validation/additional-methods.min.js'%}"></script>
     
     <!--plugins.js - Some Specific JS codes for Plugin Settings-->
-    <script type="text/javascript" src="{ % static 'js/plugins.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/plugins.min.js' %}"></script>
     <!--custom-script.js - Add your own theme custom JS-->
-    <script type="text/javascript" src="{ % static 'js/custom-script.js"></script>
+    <script type="text/javascript" src="{% static 'js/custom-script.js' %}"></script>
     
 </body>
 
