user database added

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
   <center>
   <h1>Project is active!!</h1>
-  <a href="">go to canteen</a>
+  <a href="./cankiet/">go to canteen</a>
   </center>
 </body>
 </html>
