--- a/cankiet/templates/cankiet/index2.html
+++ b/cankiet/templates/cankiet/index2.html
@@ -119,7 +119,7 @@
                              data-splitin="none" 
                              data-splitout="none" 
                              style="z-index: 6;">
-                             <span class="small_title">Yes We Have</span> <br> The &nbsp; Best &nbsp; Fish &nbsp;<span class="color">Steak</span>
+                             <span class="small_title">Are &nbsp; you &nbsp; Hungry</span> <br>  &nbsp; Best &nbsp; Fish &nbsp;<span class="color">Steak</span>
                           </h1>
                                    <!-- LAYER NR. 2 -->
                            <p class="tp-caption tp-resizeme text-center"
