--- a/cankiet/templates/cankiet/login.html
+++ b/cankiet/templates/cankiet/login.html
@@ -1,37 +1,55 @@
-{% load static %}
+{% load static %} 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login form</title>
+    <title>Login Form</title>
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
-</head> 
+    <script src="{% static 'js/js/login.js' %}"></script>
+    
+</head>
 <body>
     
 <div class="container">
     <h2>Login</h2>
    
-    <form id="loginForm" action="">
+    <!-- Add Django's form and POST method -->
+    <form id="loginForm" method="POST" action="{% url 'check' %}">
+        {% csrf_token %}  <!-- Protects against CSRF attacks -->
         
         <div class="form-group">
-            <input id="username" type="text" required>
-            <label for="username">Username</label>
+            <!-- Use Django's form rendering -->
+            {{ form.username }}
+            <label for="u_id">Username</label>
         </div>
 
         <div class="form-group">
-            <input id="password" type="password" required>
+            {{ form.password }}
             <label for="password">Password</label>
         </div>
 
-        <p><input type="checkbox">Remember Me <a href="#">Forget Password</a></p>
+        <p>
+            <input type="checkbox" name="remember_me"> Remember Me 
+            <a href="#">Forget Password</a>
+        </p>
 
-        <input id="btn" type="submit" value="Login" disabled>
-       
+        <input id="btn" type="submit" value="Login">
     </form>
+
+    <!-- Display errors if credentials are invalid -->
+    {% if form.errors %}
+        <div style="color: red;">
+            {% for field, errors in form.errors.items %}
+                <p>{{ field }}: {{ errors|join:", " }}</p>
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <p>{{ error }}</p>
+            {% endfor %}
+        </div>
+    {% endif %}
 </div>
 
-<script src="{% static 'js/login.js'%}"></script>
 </body>
 </html>
