--- a/static/css/login.css
+++ b/static/css/login.css
@@ -9,7 +9,7 @@
 body{
     width: 100vw;
     height: 100vh;
-    background: url(/images/im.jpg)no-repeat;
+    background: url(./images/im.jpg)no-repeat;
     background-position: center;
     background-size: cover;
     display: flex;
