--- a/cankiet/templates/cankiet/index2.html
+++ b/cankiet/templates/cankiet/index2.html
@@ -76,7 +76,7 @@
                    </div>
                    <div class="navbar-right-1">
                    <ul class="nav navbar-nav  navbar-right"> 
-                   <li><a href="menu.html">Menu</a></li>
+                   <li><a href="{% url 'orders'%}">Menu</a></li>
                    <li><a href="blog.html">blog</a></li>
                    <li><a href="{% url 'logout'%}">Logout</a></li>
                  </ul>
