--- a/cankiet/templates/cankiet/index2.html
+++ b/cankiet/templates/cankiet/index2.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/zerogrid.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/loader.css'%}">
-    <link rel="shortcut icon" href="{% static 'images/cankiet-logo.webp'%}">
+    <link rel="shortcut icon" href="{% static 'images/cankiet_logo.png'%}">
 </head>
 <body>
 <!--Loader-->
@@ -52,7 +52,7 @@
                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#fixed-collapse-navbar" aria-expanded="false"> 
                <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span> <span class="icon-bar bottom-bar"></span> 
                </button>
-               <a class="navbar-brand logo-center" href="index.html"><img src="{% static 'images/cankiet-logo.webp' %}" alt="logo" class="img-responsive"></a>
+               <a class="navbar-brand  logo-center" href="index.html"><img src="{% static 'images/cankiet_logo.png' %}" alt="logo" class="img-responsive"></a>
             </div>
            
                <div id="fixed-collapse-navbar" class="navbar-collapse collapse">
@@ -232,7 +232,7 @@
    <section id="services" class="padding-bottom">
      <div class="container">
        <div class="row">
-         <div class="col-md-8">
+         <div class="col-md-12">
             <h2 class="heading">Featured &nbsp; Food</h2>
             <hr class="heading_space">
             <div class="slider_wrap">
@@ -280,174 +280,10 @@
            </div>
            </div>
          </div>
-         <div class="col-md-4">
-           <h2 class="heading">Our &nbsp; Menu</h2>
-           <hr class="heading_space">
-           <ul class="menu_widget">
-             <li>Classic Nachos<span>$499.00</span></li>
-             <li>Nachos Grande<span>$249.00</span></li>
-             <li>Avocado Shell Stuffed<span>$150.00</span></li>
-             <li>Stuffed Mushroom<span>$199.00</span></li>
-             <li>Baked Potato Jackets<span>$99.00</span></li>
-             <li>Mexican Taco<span>$899.00</span></li>
-             <li>Tex-Mex Chicken<span>$1250.00</span></li>
-             <li>Quesadillas Acapulco<span>$399.00</span></li>
-           </ul>
-            <h3>Other Special Menu</h3>
-            <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse <strong>molestie consequat</strong>, vel illum dolore nulla facilisis.</p>
-         </div>
        </div>
      </div>
    </section>
-   
-   
-   <!-- image with content -->
-   <section class="info_section paralax">
-     <div class="container">
-       <div class="row">
-         <div class="col-md-2"> </div>
-         <div class="col-md-8">
-            <div class="text-center">
-            <h2 class="heading_space">HOT Deal of the Day</h2>
-            <p class="heading_space detail">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore nulla facilisis. velit esse molestie consequat, vel illum dolore nulla facilisis.</p>
-            <a href="#order-form" class="btn-common-white page-scroll">Order Now</a>
-            </div>          
-         </div>
-         <div class="col-md-2"></div>
-       </div>
-     </div>
-   </section>
-   
-   
-   
-   <!-- Food Gallery -->
-   <section id="gallery" class="padding">
-     <div class="container">
-         <div class="row">
-        <div class="col-md-12 text-center">
-           <h2 class="heading ">Delicious &nbsp; Food</h2>
-           <hr class="heading_space">
-           <div class="work-filter">
-             <ul class="text-center">
-                <li><a href="javascript:;" data-filter="all" class="active filter">All Food</a></li>
-                <li><a href="javascript:;" data-filter=".starters" class="filter">Starters</a></li>
-                <li><a href="javascript:;" data-filter=".drinks" class="filter">Drinks & Beverges</a></li>
-                <li><a href="javascript:;" data-filter=".dinner" class="filter"> Dinner</a></li>
-                <li><a href="javascript:;" data-filter=".lunch" class="filter">Breakfast & Lunch</a></li>
-             </ul>
-           </div>
-         </div>
-       </div>
-        <div class="row">
-         <div class="zerogrid">
-           <div class="wrap-container">
-             <div class="wrap-content clearfix home-gallery">
-               <div class="col-1-4 mix work-item drinks">
-                 <div class="wrap-col">
-                   <div class="item-container">
-                     <div class="image">
-                       <img src="images/gallery1.jpg" alt="cook"/>
-                       <div class="overlay">
-                           <a class="video fancybox.iframe overlay-inner" href="https://player.vimeo.com/video/94224205?autoplay=1"><i class=" icon-eye6"></i></a>
-                       </div>
-                     </div> 
-                   </div>
-                 </div>
-               </div>
-               <div class="col-1-4 mix work-item starters">
-                 <div class="wrap-col">
-                   <div class="item-container">
-                     <div class="image">
-                       <img src="images/galler2.jpg" alt="cook"/>
-                       <div class="overlay">
-                           <a class="fancybox overlay-inner" href="images/galler2.jpg" data-fancybox-group="gallery"><i class=" icon-eye6"></i></a>
-                       </div>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-               <div class="col-1-4 mix work-item dinner">
-                 <div class="wrap-col">
-                   <div class="item-container">
-                     <div class="image">
-                       <img src="images/gallery3.jpg" alt="cook"/>
-                       <div class="overlay">
-                           <a class="fancybox overlay-inner" href="images/gallery3.jpg" data-fancybox-group="gallery"><i class=" icon-eye6"></i></a>
-                       </div>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-               <div class="col-1-4 mix work-item drinks">
-                 <div class="wrap-col">
-                   <div class="item-container">
-                     <div class="image">
-                       <img src="images/gallery4.jpg" alt="cook"/>
-                       <div class="overlay">
-                           <a class="fancybox overlay-inner" href="images/gallery4.jpg" data-fancybox-group="gallery"><i class=" icon-eye6"></i></a>
-                       </div>
-                     </div>
-                   </div>
-                 </div>
-               </div>  
-               <div class="col-1-4 mix work-item dinner">
-                 <div class="wrap-col">
-                   <div class="item-container">
-                     <div class="image">
-                       <img src="images/gallery5.jpg" alt="cook"/>
-                       <div class="overlay">
-                           <a class="fancybox overlay-inner" href="images/gallery5.jpg" data-fancybox-group="gallery"><i class=" icon-eye6"></i></a>
-                       </div> 
-                     </div>
-                   </div>
-                 </div>
-               </div>
-               <div class="col-1-4 mix work-item lunch">
-                 <div class="wrap-col">
-                   <div class="item-container">
-                     <div class="image">
-                       <img src="images/gallery6.jpg" alt="cook"/>
-                       <div class="overlay">
-                           <a class="fancybox overlay-inner" href="images/gallery6.jpg" data-fancybox-group="gallery"><i class=" icon-eye6"></i></a>
-                       </div>
-                     </div> 
-                   </div>
-                 </div>
-               </div>
-               <div class="col-1-4 mix work-item starters">
-                 <div class="wrap-col">
-                   <div class="item-container">
-                     <div class="image">
-                       <img src="images/gallery7.jpg" alt="cook"/>
-                       <div class="overlay">
-                           <a class="fancybox overlay-inner" href="images/gallery7.jpg" data-fancybox-group="gallery"><i class=" icon-eye6"></i></a>
-                       </div>
-                     </div> 
-                   </div>
-                 </div>
-               </div>
-               <div class="col-1-4 mix work-item starters">
-                 <div class="wrap-col">
-                   <div class="item-container">
-                     <div class="image">
-                       <img src="images/gallery8.jpg" alt="cook"/>
-                       <div class="overlay">
-                         <a class="video fancybox.iframe overlay-inner" href="https://player.vimeo.com/video/94224205?autoplay=1"><i class=" icon-eye6"></i></a>
-                       </div>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-          </div>
-         </div>
-     </div>
-   </section>
-   
-   
-   
-   
+  
    <!-- facts counter  -->
    <section id="facts">
      <div class="container">
@@ -485,79 +321,6 @@
        </div>  
      </div>
    </section>
-   
-   
-   
-   
-   <!-- Our cheffs -->
-   <section id="cheffs" class="padding">
-     <div class="container">
-       <div class="row">
-         <div class="col-md-12 text-center">
-         <h2 class="heading">Our &nbsp; Kitchen &nbsp; Staff</h2>
-         <hr class="heading_space">
-         </div>
-       </div>
-       <div class="row">
-         <div class="col-md-12">
-           <div class="cheffs_wrap_slider">
-             <div id="our-cheffs" class="owl-carousel">
-               <div class="item">
-                 <div class="cheffs_wrap">
-                  <img src="images/our-cheffs1.jpg" alt="Kitchen Staff">
-                  <h3>Stafeny Rose</h3>
-                  <small>Head Of Kitchen</small>
-                  <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="cheffs_wrap">
-                  <img src="images/our-cheffs2.jpg" alt="Kitchen Staff">
-                  <h3>Michael Reubens</h3>
-                  <small>Food Supervisor</small>
-                  <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="cheffs_wrap">
-                  <img src="images/our-cheffs3.jpg" alt="Kitchen Staff">
-                  <h3>Angle Maria</h3>
-                  <small>Head Cook</small>
-                  <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="cheffs_wrap">
-                  <img src="images/our-cheffs1.jpg" alt="Kitchen Staff">
-                  <h3>Stafeny Rose</h3>
-                  <small>Food Supervisor</small>
-                  <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="cheffs_wrap">
-                  <img src="images/our-cheffs2.jpg" alt="Kitchen Staff">
-                  <h3>David Miller</h3>
-                  <small>Food Supervisor</small>
-                  <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="cheffs_wrap">
-                  <img src="images/our-cheffs3.jpg" alt="Kitchen Staff">
-                  <h3>Cristina Rose</h3>
-                  <small>Food Supervisor</small>
-                  <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </section>
-   
-   
    
    <!-- Order Online --> 
    <section id="order-form" class="order_section">
@@ -625,111 +388,6 @@
        <div class="col-md-3"></div>
      </div>
    </section>
-   
-   
-   
-   
-   
-   
-   <!--Featured Receipes -->
-   <section id="news" class="bg_grey padding">
-     <div class="container">
-       <div class="row">
-         <div class="col-md-12 text-center">
-         <h2 class="heading">Featured &nbsp; Food &nbsp; Receipes</h2>
-         <hr class="heading_space">
-         </div>
-       </div>
-       <div class="row">
-         <div class="col-md-12">
-           <div class="cheffs_wrap_slider">
-             <div id="news-slider" class="owl-carousel">
-               <div class="item">
-                 <div class="news_content">
-                  <img src="images/news-img3.jpg" alt="Docotor">
-                  <div class="date_comment">
-                     <span>22<small>apr</small></span>
-                     <a href="#."><i class="icon-comment"></i> 5</a>
-                  </div>
-                  <div class="comment_text">
-                    <h3><a href="#.">Lorem ipsum dolor</a></h3>
-                    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore nulla facilisis.</p>
-                  </div>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="news_content">
-   
-                  <img src="images/news-img2.jpg" alt="Docotor">
-                  <div class="date_comment">
-                     <span>22<small>apr</small></span>
-                     <a href="#."><i class="icon-comment"></i> 5</a>
-                  </div>
-                  <div class="comment_text">
-                    <h3><a href="#.">Lorem ipsum</a></h3>
-                    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore nulla facilisis.</p>
-                  </div>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="news_content">
-                  <img src="images/news-img1.jpg" alt="Docotor">
-                  <div class="date_comment">
-                     <span>22<small>apr</small></span>
-                     <a href="#."><i class="icon-comment"></i> 5</a>
-                  </div>
-                  <div class="comment_text">
-                    <h3><a href="#.">Lorem ipsum dolor</a></h3>
-                    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore nulla facilisis.</p>
-                  </div>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="news_content">
-                  <img src="images/news-img3.jpg" alt="Docotor">
-                  <div class="date_comment">
-                     <span>22<small>apr</small></span>
-                      <a href="#."><i class="icon-comment"></i> 5</a>
-                  </div>
-                  <div class="comment_text">
-                    <h3><a href="#.">Lorem dolor</a></h3>
-                    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore nulla facilisis.</p>
-                  </div>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="news_content">
-                  <img src="images/news-img2.jpg" alt="Docotor">
-                  <div class="date_comment">
-                     <span>22<small>apr</small></span>
-                      <a href="#."><i class="icon-comment"></i> 5</a>
-                  </div>
-                  <div class="comment_text">
-                    <h3><a href="#.">Lorem ipsum dolor</a></h3>
-                    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore nulla facilisis.</p>
-                  </div>
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="news_content">
-                  <img src="images/news-img1.jpg" alt="Docotor">
-                  <div class="date_comment">
-                     <span>22<small>apr</small></span>
-                      <a href="#."><i class="icon-comment"></i> 5</a>
-                  </div>
-                  <div class="comment_text">
-                    <h3><a href="#.">Lipsum dolor</a></h3>
-                    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore nulla facilisis.</p>
-                  </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </section>
-   
    
    <!-- testinomial -->
    <section id="testinomial" class="padding">
@@ -848,4 +506,4 @@
 <script src="{% static 'js\js/jquery.fancybox.js'%}"></script>
 <script src="{% static 'js\js/functions.js'%}" type="text/javascript"></script>
 </body>
-</html>s
+</html>
