--- a/cankiet/templates/cankiet/canteens.html
+++ b/cankiet/templates/cankiet/canteens.html
@@ -1,11 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canteens</title>
+    <title>canteens</title>
+
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/style2.css'%}">
 </head>
 <body>
-    <h1>canteen page</h1>
+    
+
+
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
