--- a/static/css/canteen.css
+++ b/static/css/canteen.css
@@ -7,6 +7,8 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    position: absolute;
+    top: 20px;
 }
 
 .card-custom {
@@ -35,7 +37,7 @@
 }
 
 .btn-custom {
-    background-color: #007bff;
+    background-color: #ff9100;
     color: white;
 }
 
