--- a/cankiet/templates/cankiet/canteens.html
+++ b/cankiet/templates/cankiet/canteens.html
@@ -4,16 +4,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>canteens</title>
-
-
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
-    <link rel="stylesheet" href="{% static 'css/style2.css'%}">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+      
+    <link rel="stylesheet" href="{% static 'css/canteen.css'%}">
+    <title>canteen</title>
 </head>
 <body>
-    
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="2000">
+            <img src="{% static 'images/grid-layout2.jpg'%}" height="560px" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="/static/images/grid-layout3.jpg" height="560px" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="/static/images/grid-layout4.jpg" height="560px" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+      <div class="maincontainer m-3 p-3  d-flex justify-content-between ">
+      <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <!-- Card -->
+                <div class="card card-custom">
+                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <div class="card-body">
+                        <h5 class="card-title">Main Canteen</h5>
+                        
+                        <a href="#" class="btn btn-custom">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <!-- Card -->
+                <div class="card card-custom">
+                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <div class="card-body">
+                        <h5 class="card-title">Healthy Hut</h5>
+                        
+                        <a href="#" class="btn btn-custom">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <!-- Card -->
+                <div class="card card-custom">
+                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <div class="card-body">
+                        <h5 class="card-title">MCA Canteen Wala</h5>
+                        
+                        <a href="#" class="btn btn-custom">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        
+            <div class="col-sm-4">
+                <!-- Card -->
+                <div class="card card-custom">
+                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <div class="card-body">
+                        <h5 class="card-title">Btech Canteen wala</h5>
+                        
+                        <a href="#" class="btn btn-custom">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <!-- Card -->
+                <div class="card card-custom">
+                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <div class="card-body">
+                        <h5 class="card-title">Healthy Hut</h5>
+                        
+                        <a href="#" class="btn btn-custom">Learn More</a>
+                    </div>
+                </div>
+        </div>
+    </div>
+    </div>
 
-
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
