--- a/cankiet/templates/cankiet/canteen.html
+++ b/cankiet/templates/cankiet/canteen.html
@@ -5,23 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="/static/css/canteen.css">
+    <!-- Bootstrap Icons -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  
+    <link rel="stylesheet" href="/static/css/canteen.css">
     <title>canteen</title>
 </head>
 <body>
+    
+    <!-- carousel -->
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
-            <img src="/static/images/grid-layout2.jpg" height="560px" class="d-block w-100" alt="...">
+            <img src="/staticfiles/images/grid-layout2.jpg" height="560px"  class="d-block w-100 blur" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="/static/images/grid-layout3.jpg" height="560px" class="d-block w-100" alt="...">
+            <img src="/staticfiles/images/grid-layout3.jpg" height="560px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="/static/images/grid-layout4.jpg" height="560px" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            <img src="/staticfiles/images/grid-layout4.jpg" height="560px" class="d-block w-100" alt="...">
+          </div><button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
@@ -30,39 +33,40 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <!-- boxes -->
       <div class="maincontainer m-3 p-3  d-flex justify-content-between ">
       <div class="container">
         <div class="row">
             <div class="col-sm-4">
                 <!-- Card -->
                 <div class="card card-custom">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <img src="/staticfiles/images/main canteen.jpg" class="card-img-top" alt="Card image">
                     <div class="card-body">
                         <h5 class="card-title">Main Canteen</h5>
                         <p class="card-text">This is a simple description of the card. It can be brief, providing details about the content.</p>
-                        <a href="#" class="btn btn-custom">Learn More</a>
+                        <a href="#" class="btn btn-custom">Check Items</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <!-- Card -->
                 <div class="card card-custom">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <img src="/staticfiles/images/healthy hut.webp" class="card-img-top" alt="Card image">
                     <div class="card-body">
                         <h5 class="card-title">Healthy Hut</h5>
                         <p class="card-text">This is a simple description of the card. It can be brief, providing details about the content.</p>
-                        <a href="#" class="btn btn-custom">Learn More</a>
+                        <a href="#" class="btn btn-custom">Check Items</a>
                     </div>
                 </div>
     </div>
             <div class="col-sm-4">
                 <!-- Card -->
                 <div class="card card-custom">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <img src="/staticfiles/images/green chili.jpg" class="card-img-top" alt="Card image">
                     <div class="card-body">
-                        <h5 class="card-title">MCA Canteen Wala</h5>
+                        <h5 class="card-title">Green Chili</h5>
                         <p class="card-text">This is a simple description of the card. It can be brief, providing details about the content.</p>
-                        <a href="#" class="btn btn-custom">Learn More</a>
+                        <a href="#" class="btn btn-custom">Check Items</a>
                     </div>
                 </div>
             </div>
@@ -70,26 +74,84 @@
             <div class="col-sm-4">
                 <!-- Card -->
                 <div class="card card-custom">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <img src="/staticfiles/images/food-3.jpg" class="card-img-top" alt="Card image">
                     <div class="card-body">
                         <h5 class="card-title">Btech Canteen wala</h5>
                         <p class="card-text">This is a simple description of the card. It can be brief, providing details about the content.</p>
-                        <a href="#" class="btn btn-custom">Learn More</a>
+                        <a href="#" class="btn btn-custom">Check Items</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <!-- Card -->
                 <div class="card card-custom">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <img src="/staticfiles/images/food-1.jpg" class="card-img-top" alt="Card image">
                     <div class="card-body">
-                        <h5 class="card-title">Healthy Hut</h5>
+                        <h5 class="card-title">Pharmacy canteen Wala</h5>
                         <p class="card-text">This is a simple description of the card. It can be brief, providing details about the content.</p>
-                        <a href="#" class="btn btn-custom">Learn More</a>
+                        <a href="#" class="btn btn-custom">Check Items</a>
                     </div>
                 </div>
     </div>
     </div>
     </div>
-</body>
-</html>
+    <!-- footer -->
+    <footer class="bg-dark text-white pt-4 pb-2 mt-5">
+        <div class="container">
+          <div class="row">
+            <!-- About Section -->
+            <div class="col-md-4">
+              <h5>About Us</h5>
+              <p>
+                We are a company that provides excellent services and products to our customers. Our mission is to offer high-quality solutions with a focus on customer satisfaction.
+              </p>
+            </div>
+      
+            <!-- Quick Links Section -->
+            <div class="col-md-4">
+              <h5>Quick Links</h5>
+              <ul class="list-unstyled">
+                <li><a href="#"class="text-white">Home</a></li>
+                <li><a href="#" class="text-white">About</a></li>
+                <li><a href="#" class="text-white">Services</a></li>
+                <li><a href="#" class="text-white">Contact</a></li>
+              </ul>
+            </div>
+      
+            <!-- Social Media Section -->
+            <div class="col-md-4">
+              <h5>Follow Us</h5>
+              <ul class="list-unstyled d-flex">
+                <li class="me-3">
+                  <a href="#" class="text-white"><i class="bi bi-facebook" style="font-size: 24px;"></i></a>
+                </li>
+                <li class="me-3">
+                  <a href="#" class="text-white"><i class="bi bi-twitter" style="font-size: 24px;"></i></a>
+                </li>
+                <li class="me-3">
+                  <a href="#" class="text-white"><i class="bi bi-instagram" style="font-size: 24px;"></i></a>
+                </li>
+                <li>
+                    <a href="#" class="text-white"><i class="bi bi-facebook" style="font-size: 24px;"></i></a>
+
+                  
+                </li>
+              </ul>
+            </div>
+          </div>
+      
+          <!-- Contact Info Section -->
+          <div class="row mt-4">
+            <div class="col-12 text-center">
+              <p>Contact us: info@company.com | +123 456 7890</p>
+            </div>
+          </div>
+        </div>
+      
+        <!-- Footer Bottom -->
+        <div class="bg-dark text-center text-white py-2">
+          <p class="mb-0">&copy; 2024 Company Name. All Rights Reserved.</p>
+        </div>
+      </footer>
+      
+
