--- a/cankiet/templates/cankiet/login.html
+++ b/cankiet/templates/cankiet/login.html
@@ -26,7 +26,7 @@
         <div class="form-group">
             <!-- Use Django's form rendering -->
             {{ form.username }}
-            <label for="u_id">Username</label>
+            <label for="username">Username</label>
         </div>
 
         <div class="form-group">
