payment page added

--- a/cankiet/templates/cankiet/index2.html
+++ b/cankiet/templates/cankiet/index2.html
@@ -56,15 +56,15 @@
            
                <div id="fixed-collapse-navbar" class="navbar-collapse collapse">
                  
-                 <div class="navbar-left-1">
+                 <div class="navbar-left-1 ">
                  <ul class="nav navbar-nav  navbar-left">
                    <li class="dropdown active">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
                    </li>
                    <li><a href="{% url 'canteens' %}">Canteens</a></li>
                    
-                     <li class="dropdown">
-                     <a data-toggle="dropdown" href="#" class="dropdown-toggle">gallery</a>
+                     <li class="dropdown ">
+                     <a data-toggle="dropdown" href="#" class="dropdown-toggle ">gallery</a>
                      <ul class="dropdown-menu">
                        <li><a href="gallery.html">Gallery Three</a></li>
                        <li><a href="gallery4c.html">Gallery Four column</a></li>
@@ -141,7 +141,7 @@
          </li>
    
          <li data-transition="fade text-center">
-           <img src="{% static 'images/hom2-banner2.jpg' %}"  alt="" data-bgposition="center center" data-bgfit="cover">	
+           <img src="{% static 'images/home2-banner2.jpg' %}"  alt="" data-bgposition="center center" data-bgfit="cover">	
           <h1 class="tp-caption tp-resizeme text-center" 
                              data-x="center" data-hoffset="15"
                              data-y="170" 
