--- a/cankiet/templates/cankiet/canteens.html
+++ b/cankiet/templates/cankiet/canteens.html
@@ -45,7 +45,7 @@
                     <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
                     <div class="card-body">
                         <h5 class="card-title">{{can.c_name}}</h5>
-                        <a href="{% url 'menu' can.c_no %}" class="btn btn-custom">See menu</a>
+                        <a href="{% url 'food' can.c_no %}" class="btn btn-custom">See menu</a>
                     </div>
                     </div>
                         </div>
