--- a/cankiet/templates/cankiet/canteens.html
+++ b/cankiet/templates/cankiet/canteens.html
@@ -14,13 +14,13 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
-            <img src="{% static 'images/grid-layout2.jpg'%}" height="560px" class="d-block w-100" alt="...">
+            <img src="{% static 'images/grid-layout2.jpg'%}" height="720px" class="d-block w-100" style="filter: blur(3px);" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="/static/images/grid-layout3.jpg" height="560px" class="d-block w-100" alt="...">
+            <img src="/static/images/grid-layout3.jpg" height="720px" class="d-block w-100" style="filter: blur(3px);" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="/static/images/grid-layout4.jpg" height="560px" class="d-block w-100" alt="...">
+            <img src="/static/images/grid-layout4.jpg" height="720px" class="d-block w-100"  style="filter: blur(3px);" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
